Fix for aligning top level logos and nav links in white bar

--- a/_sass/partials/_conference-header.scss
+++ b/_sass/partials/_conference-header.scss
@@ -37,7 +37,8 @@
 .conference-logo {
   //background-color: #000000 !important;
   margin: auto !important;
-  padding-bottom: 10px;
+  padding-bottom: 0px !important;
+  padding-bottom: 0px !important;
 }
 
 .conference-title-header {
@@ -47,8 +48,10 @@
 
 .conference-top-nav-list {
   @include list-unstyled;
-  margin: 0px 0px 0px -100px !important;
-  font-size: 14px !important;
+  //margin: 0px 0px 0px -100px !important;
+  //font-size: 14px !important;
+  display: inline-block !important;
+  padding-right: 10px !important;
 
   li {
     display: inline-block !important;
